AC_PREREC(2.5.3)

AC_INIT([elliptics-fastcgi], [m4_esyscmd([head -n 1 debian/changelog | sed -e 's/.*[(]//' | sed -e 's/[)].*//' | tr -d '\n'])], [lmovsesjan@yandex-team.ru])
AM_INIT_AUTOMAKE

AC_GNU_SOURCE
AC_CONFIG_HEADERS(config/settings.h)

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL

AC_LANG([C++])
AM_MAINTAINER_MODE

AX_SET_VERSION_INFO(AC_PACKAGE_VERSION)

PKG_CHECK_MODULES(yplatform, [yandex-platform], [], [ AC_MSG_NOTICE([yandex platform configuration not found]) ])

AC_SUBST(yplatform_LIBS)
AC_SUBST(yplatform_CFLAGS)

LIBS="$LIBS $yplatform_LIBS"
CPPFLAGS="$CPPFLAGS $yplatform_CFLAGS"

AX_BOOST_THREAD

AC_CHECK_FASTCGIDAEMON

AC_CHECK_LIB([elliptics_cpp], [main], [LIBS="$LIBS -L/usr/lib/ -lelliptics_cpp"], [LIBS="$LIBS -lelliptics_cpp"])
AC_CHECK_LIB([crypto], [main])
AC_CHECK_LIB([curl], [main])

ac_geobase="no"
AC_ARG_ENABLE(geobase,
	AS_HELP_STRING(--enable-geobase,enables geobase using),
	[
		if test "f$enableval" == "fyes"; then
			ac_geobase="yes"
		fi
	]
)

AM_CONDITIONAL(HAVE_GEOBASE, [test "f$ac_geobase" = "fyes"])

if test "f$ac_geobase" = "fyes"
	then
	AC_CHECK_LIB([geobase3], [main])
	CPPFLAGS="$CPPFLAGS -DHAVE_GEOBASE=1"
fi

AC_CONFIG_FILES([Makefile
	module/Makefile])

AC_OUTPUT

