AC_PREREC(2.5.3)

AC_INIT([elliptics-fastcgi], [m4_esyscmd([head -n 1 debian/changelog | sed -e 's/.*[(]//' | sed -e 's/[)].*//' | tr -d '\n'])], [lmovsesjan@yandex-team.ru])
AM_INIT_AUTOMAKE

AC_GNU_SOURCE
AC_CONFIG_HEADERS(config/settings.h)

AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LIBTOOL

AC_LANG([C++])
AM_MAINTAINER_MODE

AX_SET_VERSION_INFO(AC_PACKAGE_VERSION)

PKG_CHECK_MODULES(yplatform, [yandex-platform], [], [ AC_MSG_NOTICE([yandex platform configuration not found]) ])

AC_SUBST(yplatform_LIBS)
AC_SUBST(yplatform_CFLAGS)

LIBS="$LIBS $yplatform_LIBS"
CPPFLAGS="$CPPFLAGS $yplatform_CFLAGS"

AX_BOOST_THREAD

AC_CHECK_FASTCGIDAEMON
AC_CHECK_ELLIPTICS

AM_CONDITIONAL(HAVE_GEOBASE, [test 1 = 0])

AC_CHECK_LIB([crypto], [main])
AC_CHECK_LIB([curl], [main])
AC_CHECK_LIB([geobase3], [main], 
	AS_IF([test -f "${prefix}/lib/fastcgi2/elliptics-regional-module.so"],
		[AC_DEFINE(HAVE_GEOBASE, 1, [Have libgeobase3]) AM_CONDITIONAL(HAVE_GEOBASE, true)]))

AC_CHECK_LIB([zmq], [main], [have_libzmq="yes"])
AC_CHECK_LIB([msgpack], [main], [have_msgpack="yes"])

AS_IF([test "x$have_libzmq" = "xyes" -a "x$have_msgpack" = "xyes" ], 
	[AC_DEFINE(HAVE_METABASE, 1, [Have metabase support])
	 LIBS="-lzmq -lmsgpack  $LIBS"])

AC_CONFIG_FILES([Makefile
	module/Makefile])

AC_OUTPUT

